--- a/gold_earrings.html
+++ b/gold_earrings.html
@@ -4,6 +4,7 @@
  </head> 
 <table background="fon.jpg" border="0" cellpadding="0" cellspacing="0" style="width: 100%">
 	<body>
+<p unselectable="on" oncopy="return false" oncontextmenu="return false" onselectstart="return false"><table align="center" border="0" cellpadding="1" cellspacing="1" style="width: 1000px; height: 500px">
 		<tr>
 			<td style="vertical-align: top; width: 300px; text-align: center;">
 				<p>&nbsp;</p>
