--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="keywords" content="diamonds, ювелирные украшения, из золота, подарки, кольца из золота, золотые серьги" />
 <meta http-equiv="content-language" content="ru"></head> 
 <body>
-<p unselectable="on" oncopy="return false" oncontextmenu="return false" onselectstart="return false"><table align="center" border="0" cellpadding="1" cellspacing="1" style="width: 1000px; height: 500px">
+<p unselectable="on" oncopy="return false" oncontextmenu="return false" onselectstart="return false">
 <table background="fon.jpg" border="0" cellpadding="0" cellspacing="0" style="width: 100%">
  
 		<tr>
