--- a/golden_rings.html
+++ b/golden_rings.html
@@ -2,9 +2,10 @@
 <meta name="description" content="Интернет-магазин Diamonds предлагает широкий ассортимент ювелирных украшений: золотые серьги, кольца из золота и другие. Только у нас вы найдёте самые недорогие и качественные бриллианты во Владивостоке! Доставка осуществляется по всей стране."/>
 <meta name="keywords" content="diamonds, ювелирные украшения, из золота, обручальные кольца, кольца из золота, золотые серьги, кольца с бриллиантами, алмаз, аметист" />
   </head>
+<p unselectable="on" oncopy="return false" oncontextmenu="return false" onselectstart="return false">
 <table background="fon.jpg" border="0" cellpadding="0" cellspacing="0" style="width: 100%">
 	<body>
-<p unselectable="on" oncopy="return false" oncontextmenu="return false" onselectstart="return false"><table align="center" border="0" cellpadding="1" cellspacing="1" style="width: 1000px; height: 500px">
+
 		<tr>
 			<td style="vertical-align: top; width: 300px; text-align: center;">
 				<p>&nbsp;</p>
